[package]
name = "aoc-restore-snow-operations"
version = "0.4.0"
authors = ["yijiahe <yi.jiahe00@gmail.com>"]
edition = "2018"
description = "Solutions to advent of code 2023 (https://adventofcode.com/2023) implemented in Rust"
repository = "https://github.com/Yi-Jiahe/advent-of-code-2023"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "advent-of-code-2023"
path = "src/bin.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
regex = "1.10.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
